# lapjv_vs_lapmack

./: CMakeLists.txt  README.md
src/: JVC.F  LAPJVC_VS_LAPMACK.F  MACK.F
